--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon --inspect src/index.js",
+    "watch": "node-sass --watch src/resources/scss/ --output src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +24,9 @@
   },
   "devDependencies": {
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.1"
+    "node-sass": "^9.0.0",
+    "nodemon": "^3.0.1",
+    "sass": "^1.64.2",
+    "script": "^0.1.4"
   }
 }
