--- a/blog/package.json
+++ b/blog/package.json
@@ -23,9 +23,12 @@
     "express-handlebars": "^7.1.1"
   },
   "devDependencies": {
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
     "morgan": "^1.10.0",
     "node-sass": "^9.0.0",
     "nodemon": "^3.0.1",
+    "pretier": "^0.0.1",
     "sass": "^1.64.2",
     "script": "^0.1.4"
   }
