--- a/blog/package.json
+++ b/blog/package.json
@@ -20,7 +20,10 @@
   "homepage": "https://github.com/hungcao291099/learning#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "express-handlebars": "^7.1.1"
+    "express-handlebars": "^7.1.1",
+    "mongoose": "^7.4.2",
+    "mybatis-mapper": "^0.7.1",
+    "mysql2": "^3.6.0"
   },
   "devDependencies": {
     "husky": "^8.0.3",
